--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
-    "react-table": "^7.7.0"
+    "react-table": "^7.7.0",
+    "bcryptjs": "^2.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
